--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
-  background: navy
+  background-color: blue;
 }
 
 h1 {
-  color: #FFF;
-  font-size: 2em;
-  padding-top: 100px;
-  width: 100%;
-  font-family: Georgia;
+  color: black;
   text-align: center;
+}
+
+p {
+   font-family: verdana;
+  font-size:20px;
 }
