--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,10 @@ p {
    font-family: verdana;
   font-size:20px;
 }
+.byline {
+  font-family: Helvetica;
+  color: rgba(255, 255, 255, 0.5);
+  float: left;
+  font-size: 14px;
+  padding-left: 10px;
+  text-transform: uppercase;
