--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-color: green;
 }
 
 h1 {
@@ -15,7 +15,7 @@ p {
   font-family: Helvetica;
   color: rgba(255, 255, 255, 0.5);
   float: left;
-  font-size: 14px;
+  font-size: 50px;
   padding-left: 10px;
   text-transform: uppercase;
   
@@ -24,7 +24,7 @@ p {
 }
   
   .image {
-  background-image: url(profilePic.jpg);
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/soccer.jpeg");
   background-size: cover;
   background-position: center;
   height: 300px;
