--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h1 {
   text-align: left;
 }
 
-p {
+element {
   color: Brown
    font-family: verdana;
   font-size:20px;
@@ -18,4 +18,6 @@ p {
   font-size: 50px;
   text-transform: uppercase;
   
- 
+ #id {
+   color: Orange;
+  text-align: left;
