--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green;
+  background-color: white;
 }
 
 h1 {
@@ -10,7 +10,7 @@ h1 {
 element {
   color: Brown
    font-family: verdana;
-  font-size:20px;
+  font-size:40px;
 }
 .byline {
   font-family: Helvetica;
