--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ h1 {
 }
 
 h2 {
+  color: blue;
+  text-align: center;
+  font-size:40px;
+}
+
+li {
   color: black;
   text-align: center;
   font-size:40px;
